--- a/pyda-lab-0620.ipynb
+++ b/pyda-lab-0620.ipynb
@@ -271,7 +271,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -285,7 +285,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.10.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "62904c1132972672803069004015d497d78640672cb35a40da7f1355a4c1bbc5"
+   }
   }
  },
  "nbformat": 4,
