Scraping + Serach updates

--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -18,16 +18,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DLS Python Base.ipynb\n",
-      "Python SEARCH.ipynb\n",
-      "Python_Tricks.ipynb\n"
+      "Netology Pandas_basics.ipynb\n",
+      "Netology_SCRAPING PARSING.ipynb\n",
+      "Python PARSING.ipynb\n",
+      "Python SEARCH.ipynb\n"
      ]
     }
    ],
@@ -38,8 +39,8 @@
     "pattern = '*.ipynb'\n",
     "\n",
     "# q = 'SQL'\n",
-    "# q = 'parsing'\n",
-    "q = 'permut'\n",
+    "q = 'parsing'\n",
+    "# q = 'permut'\n",
     "\n",
     "for filepath in glob.iglob(pattern, recursive=True):\n",
     "    with open(filepath, encoding='UTF-8') as file:\n",
