--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -18,15 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Netology_SCRAPING PARSING.ipynb\n",
-      "Netology Pandas_basics.ipynb\n",
       "Python PARSING.ipynb\n"
      ]
     }
@@ -52,7 +50,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.8 64-bit (microsoft store)",
    "language": "python",
    "name": "python3"
   },
@@ -66,12 +64,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "62904c1132972672803069004015d497d78640672cb35a40da7f1355a4c1bbc5"
    }
   }
  },
