--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -25,7 +25,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python PARSING.ipynb\n"
+      "Netology Pandas HW funcs group.ipynb\n",
+      "Netology Pandas_JOIN_HW.ipynb\n",
+      "Netology RegEx .ipynb\n",
+      "Netology_REGEX_practice.ipynb\n"
      ]
     }
    ],
@@ -64,7 +67,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
