--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -18,14 +18,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Python PARSING.ipynb\n"
+      "Netology Pandas_JOIN_HW.ipynb\n",
+      "Netology python DICT Recursion HW3.ipynb\n",
+      "Netology Pandas_pivot_and_str.ipynb\n",
+      "Netology_SCRAPING PARSING.ipynb\n",
+      "DLS Python Base.ipynb\n",
+      "Netology Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
+      "Netology python HW classes 20221017.ipynb\n",
+      "ABD-22 Total HW.ipynb\n",
+      "Netology Pandas_JOIN_SQL_HW .ipynb\n",
+      "Netology Python  FUNCTIONS DICTS_sorting args  kwargs.ipynb\n",
+      "Netology_REGEX_practice.ipynb\n",
+      "Python_Tricks.ipynb\n",
+      "DLS  simpsons_baseline.ipynb\n",
+      "Netology Pandas_functions_groupby.ipynb\n",
+      "Netology Python HW2.ipynb\n",
+      "lecture_04_andas.ipynb\n",
+      "Netology Pandas HW funcs group.ipynb\n",
+      "Netology Python  LAB.ipynb\n",
+      "Netology Numpy _HW.ipynb\n"
      ]
     }
    ],
@@ -50,7 +68,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.8 64-bit (microsoft store)",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -64,12 +82,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "62904c1132972672803069004015d497d78640672cb35a40da7f1355a4c1bbc5"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
