--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -18,32 +18,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Netlogy ERRORS_DATES HW.ipynb\n",
       "Netology Pandas_JOIN_HW.ipynb\n",
-      "Netology python DICT Recursion HW3.ipynb\n",
-      "Netology Pandas_pivot_and_str.ipynb\n",
+      "Netology Python list dict.ipynb\n",
+      "Constraint Programming.ipynb\n",
       "Netology_SCRAPING PARSING.ipynb\n",
+      "Netology Python CLASSES.ipynb\n",
       "DLS Python Base.ipynb\n",
-      "Netology Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
-      "Netology python HW classes 20221017.ipynb\n",
-      "ABD-22 Total HW.ipynb\n",
+      "Netology Pandas HW_SQL.ipynb\n",
+      "Netlogy ERRORS_DATES .ipynb\n",
+      "Netology Python _Bases2.ipynb\n",
+      "Python_9_Numpy Matrix.ipynb\n",
       "Netology Pandas_JOIN_SQL_HW .ipynb\n",
-      "Netology Python  FUNCTIONS DICTS_sorting args  kwargs.ipynb\n",
       "Netology_REGEX_practice.ipynb\n",
       "Python_Tricks.ipynb\n",
       "DLS  simpsons_baseline.ipynb\n",
-      "Netology Pandas_functions_groupby.ipynb\n",
-      "Netology Python HW2.ipynb\n",
+      "Netology Python_7_ERRORS_DATETIME.ipynb\n",
+      "NETOLOGY PySpark Лекция 7.ipynb\n",
       "lecture_04_andas.ipynb\n",
-      "Netology Pandas HW funcs group.ipynb\n",
+      "Netology_Python_FILES Read-Write_and_pip JSON.ipynb\n",
+      "Netology Python intro.ipynb\n",
       "Netology Python  LAB.ipynb\n",
-      "Netology Numpy _HW.ipynb\n"
+      "Netology Python Datatypes LOOPs.ipynb\n"
      ]
     }
    ],
@@ -82,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
