--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -18,21 +18,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Netology Pandas_vs_set_and_dict.ipynb\n",
+      "Netlogy ERRORS_DATES HW.ipynb\n",
+      "Netology Pandas_JOIN_HW.ipynb\n",
+      "Netology python DICT Recursion HW3.ipynb\n",
+      "Netology Python list dict.ipynb\n",
       "Netology_SCRAPING PARSING.ipynb\n",
+      "PYTHON MathPlotLib VIZ.ipynb\n",
+      "DLS Python Base.ipynb\n",
+      "Netlogy ERRORS_DATES .ipynb\n",
+      "Netology Python Scrapping Parsing HW.ipynb\n",
+      "Netology python HW classes 20221017.ipynb\n",
+      "Netology Python _Bases2.ipynb\n",
+      "ABD-22 LABa.ipynb\n",
+      "Netology python open files.ipynb\n",
+      "Netology Python  netology Functions HW4 .ipynb\n",
+      "Python_9_Numpy Matrix.ipynb\n",
       "ABD-22 Total HW.ipynb\n",
+      "Netology Pandas_JOIN_SQL_HW .ipynb\n",
+      "Netology Python  FUNCTIONS DICTS_sorting args  kwargs.ipynb\n",
+      "Netology_REGEX_practice.ipynb\n",
+      "Python_Tricks.ipynb\n",
       "DLS  simpsons_baseline.ipynb\n",
-      "Netology stats_Confidence_Intervals.ipynb\n",
+      "Netology Python_7_ERRORS_DATETIME.ipynb\n",
+      "Netology stats_t-Tests.ipynb\n",
+      "Netology Python HW2.ipynb\n",
       "NETOLOGY PySpark Лекция 7.ipynb\n",
       "bash.ipynb\n",
+      "Netology RegEx .ipynb\n",
       "lecture_04_andas.ipynb\n",
-      "Python PARSING.ipynb\n"
+      "Netology_Python_FILES Read-Write_and_pip JSON.ipynb\n",
+      "Netology Pandas HW funcs group.ipynb\n",
+      "Netology Pandas_presentation_mode.ipynb\n",
+      "Netology stats_Confidential_intervals HW.ipynb\n",
+      "Pandas_MULTIindex.ipynb\n",
+      "Netology Python intro.ipynb\n",
+      "pyda-lab-0620.ipynb\n",
+      "Netology Python  LAB.ipynb\n",
+      "Python DateTimeTimeZone.ipynb\n",
+      "Netology Numpy _HW.ipynb\n",
+      "Python PARSING.ipynb\n",
+      "Netology Python Datatypes LOOPs.ipynb\n"
      ]
     }
    ],
@@ -57,6 +90,16 @@
     "                \n",
     "        if found == 1:\n",
     "            print(filepath)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_csv('/Users/velo1/SynologyDrive/GIT_syno/data/power.csv')\n",
+    "data.head()"
    ]
   }
  ],
