--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -25,47 +25,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Netology Pandas_vs_set_and_dict.ipynb\n",
-      "Netlogy ERRORS_DATES HW.ipynb\n",
       "Netology Pandas_JOIN_HW.ipynb\n",
-      "Netology python DICT Recursion HW3.ipynb\n",
-      "Netology Python list dict.ipynb\n",
-      "Netology_SCRAPING PARSING.ipynb\n",
-      "PYTHON MathPlotLib VIZ.ipynb\n",
-      "DLS Python Base.ipynb\n",
-      "Netlogy ERRORS_DATES .ipynb\n",
-      "Netology Python Scrapping Parsing HW.ipynb\n",
-      "Netology python HW classes 20221017.ipynb\n",
-      "Netology Python _Bases2.ipynb\n",
+      "Netology stats_Practice_AB.ipynb\n",
+      "Netology stats_A_B-testing HW.ipynb\n",
+      "Netology Pandas_basics.ipynb\n",
+      "Netology Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
+      "Netology Pandas HW_SQL.ipynb\n",
       "ABD-22 LABa.ipynb\n",
-      "Netology python open files.ipynb\n",
-      "Netology Python  netology Functions HW4 .ipynb\n",
-      "Python_9_Numpy Matrix.ipynb\n",
+      "Netology Pandas_JOIN.ipynb\n",
       "ABD-22 Total HW.ipynb\n",
       "Netology Pandas_JOIN_SQL_HW .ipynb\n",
-      "Netology Python  FUNCTIONS DICTS_sorting args  kwargs.ipynb\n",
-      "Netology_REGEX_practice.ipynb\n",
       "Python_Tricks.ipynb\n",
-      "DLS  simpsons_baseline.ipynb\n",
-      "Netology Python_7_ERRORS_DATETIME.ipynb\n",
-      "Netology stats_t-Tests.ipynb\n",
-      "Netology Python HW2.ipynb\n",
+      "Netology Pandas_functions_groupby.ipynb\n",
+      "Netology stats Визуализация данных HW.ipynb\n",
       "NETOLOGY PySpark Лекция 7.ipynb\n",
-      "bash.ipynb\n",
-      "Netology RegEx .ipynb\n",
       "lecture_04_andas.ipynb\n",
-      "Netology_Python_FILES Read-Write_and_pip JSON.ipynb\n",
       "Netology Pandas HW funcs group.ipynb\n",
       "Netology Pandas_presentation_mode.ipynb\n",
-      "Netology stats_Confidential_intervals HW.ipynb\n",
-      "Pandas_MULTIindex.ipynb\n",
-      "Netology Python intro.ipynb\n",
-      "pyda-lab-0620.ipynb\n",
-      "Netology Python  LAB.ipynb\n",
-      "Python DateTimeTimeZone.ipynb\n",
-      "Netology Numpy _HW.ipynb\n",
-      "Python PARSING.ipynb\n",
-      "Netology Python Datatypes LOOPs.ipynb\n"
+      "ABD-22 LABa -Kuzmin Pandas.ipynb\n"
      ]
     }
    ],
@@ -119,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
