--- a/Netology stats_Confidential_intervals HW.ipynb
+++ b/Netology stats_Confidential_intervals HW.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 85,
    "metadata": {
     "scrolled": true
    },
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
        "1684           ME       Upton  23017          0  NaN           0  NaN"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -308,7 +308,7 @@
        "1429           0  #DIV/0!  "
       ]
      },
-     "execution_count": 83,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +400,7 @@
        "4           AL     Baldwin  21.6"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
@@ -5389,7 +5389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5408,7 +5408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -6317,7 +6317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6337,7 +6337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6390,7 +6390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -6402,7 +6402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [
     {
@@ -6411,7 +6411,7 @@
        "38"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 99,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6430,7 +6430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
@@ -6440,16 +6440,6 @@
       "Стандартное отклонение ГС: 15.742\n",
       "Среднее в ГС: 44.079\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<AxesSubplot: >"
-      ]
-     },
-     "execution_count": 92,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -6465,12 +6455,12 @@
    "source": [
     "print(f\"Стандартное отклонение ГС: {df['%'].std():.3f}\")\n",
     "print(f\"Среднее в ГС: {df['%'].mean():.3f}\")\n",
-    "df['%'].hist(bins=80)"
+    "df['%'].hist(bins=80);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [
     {
@@ -6479,7 +6469,7 @@
        "(38,)"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6492,7 +6482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
     {
@@ -6501,7 +6491,7 @@
        "(44.318421052631585, 15.742396788859033)"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 102,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6515,7 +6505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -6541,7 +6531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -15576,7 +15566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15587,7 +15577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15630,7 +15620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
@@ -15639,7 +15629,7 @@
        "(2.4653667464001203, 0.01375151447955999)"
       ]
      },
-     "execution_count": 99,
+     "execution_count": 165,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15658,7 +15648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -15667,7 +15657,7 @@
        "Ttest_indResult(statistic=2.472112679960154, pvalue=0.013500837093626573)"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15694,7 +15684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -15715,7 +15705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -15779,7 +15769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15793,7 +15783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15805,7 +15795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
@@ -15848,7 +15838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -15879,7 +15869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -15944,7 +15934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -16038,7 +16028,7 @@
        "max       305.568346    306.534314      13.327846"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16055,7 +16045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -16085,7 +16075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [
     {
@@ -16094,7 +16084,7 @@
        "Ttest_relResult(statistic=0.3386438491265269, pvalue=0.7355952264426648)"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -16130,7 +16120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -16161,7 +16151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -16184,7 +16174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -20159,7 +20149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -20217,7 +20207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -20254,7 +20244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -20306,7 +20296,7 @@
        "Случайный прохожий                10            12         31"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 124,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20317,7 +20307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -20391,7 +20381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -20517,7 +20507,7 @@
        "3                               1               194  "
       ]
      },
-     "execution_count": 118,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20531,7 +20521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -20570,7 +20560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -20747,7 +20737,7 @@
        "max                        327.000000        365.000000  "
       ]
      },
-     "execution_count": 120,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20758,7 +20748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -20778,7 +20768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -20799,7 +20789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -20824,7 +20814,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20835,7 +20825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
@@ -20859,7 +20849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -20889,7 +20879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [
     {
@@ -20910,7 +20900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -20919,7 +20909,7 @@
        "True"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -20939,7 +20929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -20948,7 +20938,7 @@
        "<AxesSubplot: >"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -20969,7 +20959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -20985,7 +20975,7 @@
        "(111.68856957935898, 115.49388042203987, 119.29919126472075)"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21043,7 +21033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -21086,7 +21076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -21106,7 +21096,7 @@
     "sigma = 15\n",
     "\n",
     "sem = sigma / np.sqrt(sample_size)\n",
-    "# We use t-distribution as sample size is less than 30\n",
+    "# We use t-distribution as the sample size is less than 30\n",
     "ci_lower, ci_upper = st.t.interval(confidence = confidence, df= sample_size - 1,loc= mn, scale= sem)  \n",
     "print(f'Мы уверены на {confidence * 100:.0f}%, что истинное среднее значение генеральной совокупности находится в диапазоне между {ci_lower:5.3f} и {ci_upper:5.3f}')\n",
     "L = round(ci_upper - ci_lower)\n",
@@ -21140,7 +21130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21171,7 +21161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21181,7 +21171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -21190,7 +21180,7 @@
        "Ttest_indResult(statistic=1.6926650398430239, pvalue=0.09052089998545719)"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21212,7 +21202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -21280,7 +21270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21302,7 +21292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -21334,7 +21324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -21383,7 +21373,7 @@
        "Солнце                        39               34"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 146,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21397,7 +21387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21426,7 +21416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -21435,7 +21425,7 @@
        "(0.5811965811965812, 0.35417955365927123)"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21455,7 +21445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -21464,7 +21454,7 @@
        "0.35396880166541644"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21496,7 +21486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -21531,7 +21521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21553,7 +21543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
@@ -21562,7 +21552,7 @@
        "False"
       ]
      },
-     "execution_count": 144,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21573,7 +21563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -21582,7 +21572,7 @@
        "0.9391879453137372"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 153,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21630,7 +21620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -21656,7 +21646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -21679,7 +21669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -21689,7 +21679,7 @@
        " ShapiroResult(statistic=0.9491701126098633, pvalue=0.0010407770751044154))"
       ]
      },
-     "execution_count": 146,
+     "execution_count": 157,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21717,7 +21707,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -21726,7 +21716,7 @@
        "Ttest_indResult(statistic=11.865233896372924, pvalue=4.623319592204015e-25)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21752,7 +21742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 159,
    "metadata": {},
    "outputs": [
     {
@@ -21793,7 +21783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21803,7 +21793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 161,
    "metadata": {},
    "outputs": [
     {
@@ -21882,7 +21872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 162,
    "metadata": {},
    "outputs": [
     {
@@ -21891,7 +21881,7 @@
        "0.972286990899993"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21914,7 +21904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
@@ -21923,7 +21913,7 @@
        "Ttest_indResult(statistic=-1.95300880485141, pvalue=0.051284593140469285)"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 163,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -21942,7 +21932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
    "outputs": [
     {
