--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,31 +18,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Netology Pandas_JOIN_HW.ipynb\n",
       "Netology stats_Practice_AB.ipynb\n",
-      "Netology stats_A_B-testing HW.ipynb\n",
-      "Netology Pandas_basics.ipynb\n",
-      "Netology Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
-      "Netology Pandas HW_SQL.ipynb\n",
-      "ABD-22 LABa.ipynb\n",
-      "Netology Pandas_JOIN.ipynb\n",
+      "Netology stats Power Min_sample size_W.ipynb\n",
       "ABD-22 Total HW.ipynb\n",
-      "Netology Pandas_JOIN_SQL_HW .ipynb\n",
-      "Python_Tricks.ipynb\n",
-      "Netology Pandas_functions_groupby.ipynb\n",
-      "Netology stats Визуализация данных HW.ipynb\n",
+      "Netology stats Case_study_HW.ipynb\n",
       "NETOLOGY PySpark Лекция 7.ipynb\n",
-      "lecture_04_andas.ipynb\n",
-      "Netology Pandas HW funcs group.ipynb\n",
-      "Netology Pandas_presentation_mode.ipynb\n",
-      "ABD-22 LABa -Kuzmin Pandas.ipynb\n"
+      "Python PARSING.ipynb\n"
      ]
     }
    ],
@@ -71,9 +59,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39m/Users/velo1/SynologyDrive/GIT_syno/data/power.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m data\u001b[39m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
     "data = pd.read_csv('/Users/velo1/SynologyDrive/GIT_syno/data/power.csv')\n",
     "data.head()"
@@ -96,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
