--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -44,7 +44,7 @@
     "# q = input()\n",
     "inq = input('Input search strings separated by whitespace:').split()\n",
     "\n",
-    "for filepath in glob.iglob(pattern, recursive=True):\n",
+    "for filepath in glob.iglob(pattern, recursive=True): # recursive= True: include subdirs\n",
     "    with open(filepath, encoding='UTF-8') as file:\n",
     "        # print(file)\n",
     "        s = file.read()\n",
@@ -96,7 +96,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
   },
   "orig_nbformat": 4,
   "vscode": {
