HW case study 2023-01-22

--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -18,19 +18,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Netology Pandas_JOIN_HW.ipynb\n",
+      "Netology python DICT Recursion HW3.ipynb\n",
+      "Netology stats_Case_study HW.ipynb\n",
       "Netology stats_Practice_AB.ipynb\n",
-      "Netology stats Power Min_sample size_W.ipynb\n",
+      "Netology Pandas_pivot_and_str.ipynb\n",
+      "Netology stats_case_study_linreg_confidence_interval.ipynb\n",
+      "Netology_SCRAPING PARSING.ipynb\n",
+      "DLS Python Base.ipynb\n",
+      "Netology Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
+      "Netology python HW classes 20221017.ipynb\n",
       "ABD-22 Total HW.ipynb\n",
-      "Netology stats Case_study_HW.ipynb\n",
-      "NETOLOGY PySpark Лекция 7.ipynb\n",
-      "Python PARSING.ipynb\n"
+      "Netology Pandas_JOIN_SQL_HW .ipynb\n",
+      "Netology Python  FUNCTIONS DICTS_sorting args  kwargs.ipynb\n",
+      "Netology_REGEX_practice.ipynb\n",
+      "Python_Tricks.ipynb\n",
+      "DLS  simpsons_baseline.ipynb\n",
+      "Netology Pandas_functions_groupby.ipynb\n",
+      "Netology stats_Confidence_Intervals.ipynb\n",
+      "Netology Python HW2.ipynb\n",
+      "Netology stats_case_study_bs_conf_int.ipynb\n",
+      "Netology Pandas HW funcs group.ipynb\n",
+      "Netology Pandas_lecture_04.ipynb\n",
+      "Netology Python  LAB.ipynb\n",
+      "Netology Numpy _HW.ipynb\n"
      ]
     }
    ],
@@ -59,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -69,13 +87,13 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39m/Users/velo1/SynologyDrive/GIT_syno/data/power.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m data\u001b[39m.\u001b[39mhead()\n",
+      "Cell \u001b[0;32mIn [4], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m data \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(\u001b[39m'\u001b[39m\u001b[39m/Users/velo1/SynologyDrive/GIT_syno/data/video_games_sales.csv\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m data\u001b[39m.\u001b[39mhead()\n",
       "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
      ]
     }
    ],
    "source": [
-    "data = pd.read_csv('/Users/velo1/SynologyDrive/GIT_syno/data/power.csv')\n",
+    "data = pd.read_csv('/Users/velo1/SynologyDrive/GIT_syno/data/video_games_sales.csv')\n",
     "data.head()"
    ]
   }
@@ -96,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5 (v3.10.5:f377153967, Jun  6 2022, 12:36:10) [Clang 13.0.0 (clang-1300.0.29.30)]"
+   "version": "3.10.5"
   },
   "orig_nbformat": 4,
   "vscode": {
