--- a/Netology stats_Case_study HW.ipynb
+++ b/Netology stats_Case_study HW.ipynb
@@ -27612,7 +27612,7 @@
     "# CS mean of non-sports games\n",
     "popmean_notsports = df[df.Genre != 'Sports'].Critic_Score.mean()\n",
     "print(popmean_notsports)\n",
-    "stats.ttest_1samp(y1, popmean= popmean_notsports)"
+    "stats.ttest_1samp(y1, popmean= popmean_notsports, nan_policy= 'omit')"
    ]
   },
   {
@@ -27642,7 +27642,7 @@
     "# CS overall mean\n",
     "popmean = df.Critic_Score.mean()\n",
     "print(popmean)\n",
-    "stats.ttest_1samp(y1, popmean= popmean)"
+    "stats.ttest_1samp(y1, popmean= popmean, nan_policy= 'omit')"
    ]
   },
   {
@@ -27662,7 +27662,8 @@
     }
    ],
    "source": [
-    "stats.ttest_ind(y1, y0)"
+    "stats.ttest_ind(y1, y0, equal_var= False, nan_policy= 'omit') #  If False, perform Welch’s t-test, \n",
+    "#which does not assume equal population variance "
    ]
   },
   {
@@ -29763,7 +29764,8 @@
     }
    ],
    "source": [
-    "stats.ttest_ind(y_pc, y_ps4)"
+    "stats.ttest_ind(y_pc, y_ps4, equal_var= False, nan_policy= 'omit') #  If False, perform Welch’s t-test, \n",
+    "#which does not assume equal population variance "
    ]
   },
   {
@@ -31909,7 +31911,8 @@
     }
    ],
    "source": [
-    "stats.ttest_ind(y_rpg, y_str)"
+    "stats.ttest_ind(y_rpg, y_str, equal_var= False, nan_policy= 'omit') #  If False, perform Welch’s t-test, \n",
+    "#which does not assume equal population variance "
    ]
   },
   {
@@ -34057,6 +34060,14 @@
     "``Main assumptions:``\n",
     "* `to maximize TNR (specificity, minimize false alarm) use n-grams (2,2)`\n",
     "* `to maximize TPR (sensivity, maximize spam detection) use n-grams(1,1)`"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Feature Extraction and Logistic Regression](https://medium.com/@annabiancajones/sentiment-analysis-on-reviews-feature-extraction-and-logistic-regression-43a29635cc81)"
    ]
   }
  ],
