--- a/Python SEARCH.ipynb
+++ b/Python SEARCH.ipynb
@@ -18,36 +18,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Netology Pandas_JOIN_HW.ipynb\n",
-      "Netology python DICT Recursion HW3.ipynb\n",
-      "Netology stats_Case_study HW.ipynb\n",
-      "Netology stats_Practice_AB.ipynb\n",
-      "Netology Pandas_pivot_and_str.ipynb\n",
-      "Netology stats_case_study_linreg_confidence_interval.ipynb\n",
-      "Netology_SCRAPING PARSING.ipynb\n",
-      "DLS Python Base.ipynb\n",
-      "Netology Pandas_PIVOT_and_PYMYSTEM.ipynb\n",
-      "Netology python HW classes 20221017.ipynb\n",
-      "ABD-22 Total HW.ipynb\n",
-      "Netology Pandas_JOIN_SQL_HW .ipynb\n",
-      "Netology Python  FUNCTIONS DICTS_sorting args  kwargs.ipynb\n",
-      "Netology_REGEX_practice.ipynb\n",
-      "Python_Tricks.ipynb\n",
-      "DLS  simpsons_baseline.ipynb\n",
-      "Netology Pandas_functions_groupby.ipynb\n",
-      "Netology stats_Confidence_Intervals.ipynb\n",
-      "Netology Python HW2.ipynb\n",
-      "Netology stats_case_study_bs_conf_int.ipynb\n",
-      "Netology Pandas HW funcs group.ipynb\n",
+      "Netology math_Numpy Matrix.ipynb\n",
+      "Netology stats_Confidential_intervals HW.ipynb\n",
       "Netology Pandas_lecture_04.ipynb\n",
-      "Netology Python  LAB.ipynb\n",
       "Netology Numpy _HW.ipynb\n"
      ]
     }
